--- a/.gitignore
+++ b/.gitignore
@@ -255,3 +255,4 @@ paket-files/
 /EsiaNET/create_package.cmd
 /EsiaNET.Identity/create_package.cmd
 /EsiaNET.Identity/EsiaNET.Identity.nuspec
+/examples/ESIA.AspNetIdentityExample/ESIA.AspNetIdentityExample/App_Data
