--- a/EsiaNET.AspNetCore.Authentication/EsiaNET.AspNetCore.Authentication.csproj
+++ b/EsiaNET.AspNetCore.Authentication/EsiaNET.AspNetCore.Authentication.csproj
@@ -8,7 +8,7 @@
     <Title>Esia.NET ASP.NET Core Authentication provider</Title>
     <Authors>Alexey Zakharov</Authors>
     <PackageTags>aspnetcore;authentication;oauth;security;esia</PackageTags>
-    <TargetFrameworks>net5.0;net6.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net5.0;net6.0;net7.0;netcoreapp3.1</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/xeltan/EsiaNET</PackageProjectUrl>
     <RepositoryUrl>https://github.com/xeltan/EsiaNET</RepositoryUrl>
